include/kernels.h

#ifndef KERNELS_H
#define KERNELS_H
double bump(double x);
double cosine_kernel(double x);
double epanechnikov(double x);
double gaussian(double x);
double logistic(double x);
double quartic(double x);
double tophat(double x);
double triangle(double x);
double tricubic(double x);
#endif // KERNELS_H